--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-
+<div class="div-fundo">
+    <div class="banner">
+        <p>tem a serteza que quer elemina este item</p>
+        <div class="div-rolo">
+             <button class="btnsim">Sim</button>
+             <button class="btncancelar">Cancelar</button>
+        </div>
+    </div class="banner">
+</div>
 
 
     <main>
